--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/apollo/ui/bower_components/metisMenu/dist/metisMenu.min.css">
     <link rel="stylesheet" href="/apollo/ui/bower_components/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="/apollo/ui/bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -33,6 +34,8 @@
     <script src="/apollo/ui/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/apollo/ui/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="/apollo/ui/bower_components/Chart.js/Chart.min.js"></script>
+    <script src="/apollo/ui/bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -42,16 +45,6 @@
         <script src="js/sb-admin-2.js"></script>
     <!-- endbuild -->
 
-
-
-    <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
     <!-- Custom CSS -->
 
     <!-- Custom Fonts -->
@@ -67,7 +60,7 @@
     <div ng-app="apollo">
 
         <div ui-view></div>
-
+        <div growl></div>
     </div>
 
     </body>
