--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -36,6 +36,10 @@
     <script src="/apollo/ui/bower_components/Chart.js/Chart.min.js"></script>
     <script src="/apollo/ui/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.js"></script>
+    <script src="/apollo/ui/bower_components/spin.js/spin.min.js"></script>
+    <script src="/apollo/ui/bower_components/angular-spinner/angular-spinner.min.js"></script>
+
+
     <!-- endbower -->
     <!-- endbuild -->
     
