Finish new deployment screen

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -38,6 +38,7 @@
     <script src="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.js"></script>
     <script src="/apollo/ui/bower_components/spin.js/spin.min.js"></script>
     <script src="/apollo/ui/bower_components/angular-spinner/angular-spinner.min.js"></script>
+    <script src="/apollo/ui/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 
     <!-- endbower -->
