--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -39,6 +39,7 @@
     <script src="/apollo/ui/bower_components/spin.js/spin.min.js"></script>
     <script src="/apollo/ui/bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="/apollo/ui/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="/apollo/ui/bower_components/angular-filter/dist/angular-filter.min.js"></script>
 
 
     <!-- endbower -->
