--- a/ui/app/scripts/directives/header/header-notification/header-notification.html
+++ b/ui/app/scripts/directives/header/header-notification/header-notification.html
@@ -1,16 +1,12 @@
 <ul class="nav navbar-top-links navbar-right">
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+            <img gravatar-src="email" gravatar-size="24">  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
-            <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-            </li>
-            <li><a ui-sref="login"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a ui-sref="login" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
             </li>
         </ul>
-        <!-- /.dropdown-user -->
     </li>
-    <!-- /.dropdown -->
 </ul>
 
