Added Login, signup, permissions model, some bugfixes, ui enhancements and removed redundant files from the template

--- a/ui/app/scripts/directives/sidebar/sidebar.html
+++ b/ui/app/scripts/directives/sidebar/sidebar.html
@@ -20,6 +20,9 @@
             <li ui-sref-active="active">
                 <a ui-sref="blocker.configure"><i class="fa fa-ban fa-fw"></i> Configure Blocker</a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="auth.signup"><i class="fa fa-user-plus"></i> Add a User</a>
+            </li>
         </ul>
     </div>
 </div> 
