--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -8,7 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/apollo/ui/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -16,32 +16,32 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/sb-admin-2.css">
     <link rel="stylesheet" href="styles/timeline.css">
-    <link rel="stylesheet" href="/apollo/ui/bower_components/metisMenu/dist/metisMenu.min.css">
-    <link rel="stylesheet" href="/apollo/ui/bower_components/angular-loading-bar/build/loading-bar.min.css">
-    <link rel="stylesheet" href="/apollo/ui/bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.css">
+    <link rel="stylesheet" href="/bower_components/metisMenu/dist/metisMenu.min.css">
+    <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.min.css">
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/bower_components/angular-growl-v2/build/angular-growl.min.css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/apollo/ui/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular/angular.min.js"></script>
-    <script src="/apollo/ui/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/apollo/ui/bower_components/json3/lib/json3.min.js"></script>
-    <script src="/apollo/ui/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/apollo/ui/bower_components/metisMenu/dist/metisMenu.min.js"></script>
-    <script src="/apollo/ui/bower_components/Chart.js/Chart.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-growl-v2/build/angular-growl.min.js"></script>
-    <script src="/apollo/ui/bower_components/spin.js/spin.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-spinner/angular-spinner.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-filter/dist/angular-filter.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
-    <script src="/apollo/ui/bower_components/angular-gravatar/build/angular-gravatar.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/bower_components/json3/lib/json3.min.js"></script>
+    <script src="/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
+    <script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/bower_components/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="/bower_components/Chart.js/Chart.min.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="/bower_components/angular-growl-v2/build/angular-growl.min.js"></script>
+    <script src="/bower_components/spin.js/spin.min.js"></script>
+    <script src="/bower_components/angular-spinner/angular-spinner.min.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="/bower_components/angular-filter/dist/angular-filter.min.js"></script>
+    <script src="/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="/bower_components/angular-gravatar/build/angular-gravatar.min.js"></script>
 
 
     <!-- endbower -->
