--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
         <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
         <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.min.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.13/datatables.min.css"/>
+        <link rel="stylesheet" href="bower_components/angular-datatables/dist/css/angular-datatables.css">
+        <link href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -25,6 +28,7 @@
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript"  src=" https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -42,6 +46,7 @@
         <script src="bower_components/angular-filter/dist/angular-filter.min.js"></script>
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="bower_components/angular-gravatar/build/angular-gravatar.min.js"></script>
+        <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
