Integrate moment.js for sortings

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -47,6 +47,8 @@
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="bower_components/angular-gravatar/build/angular-gravatar.min.js"></script>
         <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+        <script src="//cdn.datatables.net/plug-ins/1.10.13/sorting/datetime-moment.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
