Add update service support

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.13/datatables.min.css"/>
         <link rel="stylesheet" href="bower_components/angular-datatables/dist/css/angular-datatables.css">
         <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css">
+        <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
+        <link rel="stylesheet" href="bower_components/codemirror/theme/material.css">
         <link href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
         <!-- endbower -->
         <!-- endbuild -->
@@ -49,6 +51,9 @@
         <script src="bower_components/angular-gravatar/build/angular-gravatar.min.js"></script>
         <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
         <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
+        <script src="bower_components/codemirror/lib/codemirror.js"></script>
+        <script src="bower_components/codemirror/mode/yaml/yaml.js"></script>
+        <script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
         <script src="//cdn.datatables.net/plug-ins/1.10.13/sorting/datetime-moment.js"></script>
         <!-- endbower -->
