Initial live sessions (Beta)

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.min.css">
         <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
         <link rel="stylesheet" href="bower_components/codemirror/theme/material.css">
+        <link rel="stylesheet" href="bower_components/xterm.js/dist/xterm.css">
         <link href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
         <!-- endbower -->
         <!-- endbuild -->
@@ -54,6 +55,9 @@
         <script src="bower_components/codemirror/lib/codemirror.js"></script>
         <script src="bower_components/codemirror/mode/yaml/yaml.js"></script>
         <script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
+        <script src="bower_components/xterm.js/dist/xterm.js"></script>
+        <script src="bower_components/xterm.js/dist/addons/attach/attach.js"></script>
+        <script src="bower_components/xterm.js/dist/addons/fit/fit.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
         <script src="//cdn.datatables.net/plug-ins/1.10.13/sorting/datetime-moment.js"></script>
         <!-- endbower -->
