Move the override to index.html

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -74,6 +74,12 @@
         <!-- Custom CSS -->
 
         <!-- Custom Fonts -->
+
+        <script type="application/javascript">
+            window.alert = function(arguments) {
+                console.log("Caught alert:", arguments)
+            };
+        </script>
     </head>
 
     <body>
