--- a/ui/app/scripts/directives/header/header.html
+++ b/ui/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Apollo. A Logz.io Continuous Deployment Thingy</a>
+        <a class="navbar-brand" href="index.html"><img class="apollo-logo" src="/apollo-logo.svg"></a>
 
     </div>
     <!-- /.navbar-header -->
